--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
         <div class="masthead">
             <div class="masthead-content text-white">
                 <div class="container-fluid px-4 px-lg-0">
-                    <h1 class="fst-italic lh-1 mb-4">Web se encuentra en construcción</h1>
+                    <h1 class="fst-italic lh-1 mb-4">Web Educativa</h1>
                     <p class="mb-5">Estamos trabajando para mejorar nuestro sitio web</p>
+                    <embed src="files/husky.pdf" type="application/pdf" width="100%" height="100%" />
                     <!-- * * * * * * * * * * * * * * *-->
                     <!-- * * SB Forms Contact Form * *-->
                     <!-- * * * * * * * * * * * * * * *-->
