--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="container-fluid px-4 px-lg-0">
                     <h1 class="fst-italic lh-1 mb-4">Web Educativa</h1>
                     <p class="mb-5">Estamos trabajando para mejorar nuestro sitio web</p>
-                    <embed src="documents/Padre-Rico-Padre-Pobre.pdf" type="application/pdf" width="100%" height="100%" />
+                    <a href="documents/Padre-Rico-Padre-Pobre.pdf" class="btn" download="Padre-Rico-Padre-Pobre.pdf">Descargar Pdf</a>
                     <!-- * * * * * * * * * * * * * * *-->
                     <!-- * * SB Forms Contact Form * *-->
                     <!-- * * * * * * * * * * * * * * *-->
