--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <div class="masthead-content text-white">
                 <div class="container-fluid px-4 px-lg-0">
                     <h1 class="fst-italic lh-1 mb-4">Web Educativa</h1>
-                    <p class="mb-5">Estamos trabajando para mejorar nuestro sitio web</p>
-                    <a href="documents/Padre-Rico-Padre-Pobre.pdf" class="btn-pdf" download="Padre-Rico-Padre-Pobre.pdf">Descargar Pdf</a>
+                    <p class="mb-5">Descarga libro Padre Rico & Padre Pobre <a href="documents/Padre-Rico-Padre-Pobre.pdf" class="btn-pdf" download="Padre-Rico-Padre-Pobre.pdf">Descargar Pdf</a></p>
+                    
                     <!-- * * * * * * * * * * * * * * *-->
                     <!-- * * SB Forms Contact Form * *-->
                     <!-- * * * * * * * * * * * * * * *-->
