--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="favicon" href="img/cocologo.png">
     <link rel="stylesheet" href="css/style.css">
-    <title>Website Starcuck</title>
+    <title>Milktea COCO | Madrid</title>
 </head>
 <body>
     <!--Hello madafucker-->
