--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
 <!--3ra part-->
         <ul class="thumb">
-            <li><img src="img/milktea1.png" onclick="imgSlider('img/MILKTEA1.png'); ChangeCircleColor('orange')"></li>
+            <li><img src="img/milktea1.png" onclick="imgSlider('img/milktea1.png'); ChangeCircleColor('orange')"></li>
             <li><img src="img/milktea2.png" onclick="imgSlider('img/milktea2.png'); ChangeCircleColor('#DDC030')"></li>
             <li><img src="img/milktea3.png"  onclick="imgSlider('img/milktea3.png'); ChangeCircleColor('#BF624E')"></li>
         </ul>
