--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <p>Refrescate en cualquier época del año, con una bebida fría, caliente, templada, con/sin azúcar, hecho a tu medida, para todos los paladares.</p>
             <p>Todas nuestras bebidas son personalizables, donde encontrarás la mejor calidad de fruta para tu bebida especial, con un toque diferente al resto</p>
             <a href="#">Ver tendencias</a>
+            <iframe title="ProyectoInstitucional" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=911f0932-7509-487f-9bdf-9b2a60968f0a&autoAuth=true&ctid=5895b058-59c4-42c9-b127-708498afb452" frameborder="0" allowFullScreen="true"></iframe>
         </div>
         <!--2nd part-->
         <div class="imgBox">
@@ -70,3 +71,4 @@
 </script>
 </body>
 </html>
+
